--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -29,12 +29,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Checkout dafny
-        uses: actions/checkout@v4
-        with:
-          repository: dafny-lang/dafny
-          ref: master
-          path: ../dafny
-          fetch-depth: 1
+        run: git clone --depth 1 --branch master https://github.com/dafny-lang/dafny.git ../dafny
 
       - name: Setup .NET
         uses: actions/setup-dotnet@v4
